--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-ReadME to be done.
+# Custom RC Car
+This was a custom RC Car that was created as an interdisciplinary project my junior year of college.
+I was tasked with handling the circuitry and the android application to control the car. I designed a
+circuit board and had the board printed to handle all the connections. The rc car runs off C and the
+android application runs on java. The android application communicates over a bluetooth connection to
+the rc car's bluetooth receiver. 
